# RAG-Application

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyrightconfig.json
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_document_display_name.py
backend/app/cache/: answer_cache.py  rate_limiter.py  redis_client.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: base.py  database.py  init_db.py
backend/app/models/: __init__.py  chat_session.py  chunk.py  document.py  document_permission.py  message.py  user.py
backend/app/rag/: docx_parser.py  embedding_service.py  generation.py  llm_service.py  loader.py  pdf_parser.py  pipeline.py  prompt_builder.py  query_router.py  rag_logging.py  retrieval_service.py  text_cleanup.py  text_splitter.py
backend/app/repositories/: chat_repository.py  chunk_repository.py  document_repository.py  user_repository.py
backend/app/services/: auth_service.py  chat_service.py  document_service.py  upload_validation.py  user_service.py
backend/app/storage/: base.py  local_storage.py
backend/app/workers/: ingestion_worker.py
backend/storage/: README.md
backend/tests/: conftest.py  test_auth.py  test_cache.py  test_chat_routes.py  test_chat_service.py  test_document_access.py  test_document_routes.py  test_health.py  test_hybrid_retrieval.py  test_query_router.py  test_rag_helpers.py  test_upload_validation.py
docs/: api_design.md  rag_pipeline.md  setup.md  system_design.md
(+77 files in other folders)
